--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="Random number generator for board games" />
+  <meta name="theme-color" content="#1c1c1f" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#1c1c1f" />
+
+  <link rel="manifest" href=/manifest.json />
+
+  <link rel="apple-touch-icon" sizes="57x57" href="/icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icon-180x180.png">
+
+  <link rel="icon" type="image/png" sizes="16x16" href="/icon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/icon-96x96.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192x192.png">
+
+  <title>Board Game RNG</title>
   %sveltekit.head%
 </head>
 <body data-sveltekit-preload-data="hover">
-<div style="display: contents">%sveltekit.body%</div>
+<main style="display: contents">%sveltekit.body%</main>
 </body>
 </html>
