Include GoatCounter for page visit counts

--- a/src/app.html
+++ b/src/app.html
@@ -26,6 +26,17 @@
   <link rel="icon" type="image/png" sizes="192x192" href="./icon-192x192.png">
 
   <title>Board Game RNG</title>
+
+  <!-- Include [GoatCounter](https://www.goatcounter.com/) for page visit counts -->
+  <script
+    data-goatcounter="https://ckant.goatcounter.com/count"
+    async
+    src="//gc.zgo.at/count.v5.js"
+    crossorigin="anonymous"
+    integrity="sha384-atnOLvQb9t+jTSipvd75X2yginT4PjVbqDdlJAmxMm+wYElFmeR6EmLP5bYeoRVQ"
+  >
+  </script>
+
   %sveltekit.head%
 </head>
 <body data-sveltekit-preload-data="hover">
